worked on js and html

--- a/Develop/blog.html
+++ b/Develop/blog.html
@@ -18,6 +18,47 @@
 
   <!-- TODO: Create header, main, and footer elements -->
 
-</body>
+<header>
+<h2>Roni's Blog</h2>
+<button type="back" id="back">⇦ back</button>
+<button class="dark" id="toggle">☽</button>
+</header>
+<main>
+  <article class="card">
+    <h2>Title</h2>
+    <blockquote>
+      <p>content</p>
+    </blockquote>
+  </article>
+  
+  <article class="card">
+    <h2>Title</h2>
+    <blockquote>
+      <p>content</p>
+    </blockquote>
+  </article>
 
+  <article class="card">
+    <h2>Title</h2>
+    <blockquote>
+      <p>content</p>
+    </blockquote>
+  </article>
+
+  <article class="card">
+    <h2>Title</h2>
+    <blockquote>
+      <p>content</p>
+    </blockquote>
+  </article>
+</main>
+<footer id="love">
+  <h3>Made with 💋 by Roni</h3>
+      <ul>
+        <li>Portfolio</li>
+        <li>Blog</li>
+        <li>Email: rutanroni@gmail.com</li>
+      </ul>
+</footer>
+</body>
 </html>
