--- a/Develop/blog.html
+++ b/Develop/blog.html
@@ -20,7 +20,7 @@
 
 <header>
 <h2>Roni's Blog</h2>
-<button type="back" id="back">⇦ back</button>
+<button id="back">⇦ back</button>
 <button class="dark" id="toggle">☽</button>
 </header>
 <main>
