--- a/Develop/index.html
+++ b/Develop/index.html
@@ -14,7 +14,7 @@
   <script defer src="./assets/js/form.js" type="text/javascript"></script>
 </head>
 
-<body>
+<body class="dark">
   <header>
     <button class="dark" id="toggle">☽</button>
   </header>
