function to retrieve data from ls added

--- a/Develop/blog.html
+++ b/Develop/blog.html
@@ -26,39 +26,36 @@
 <main>
   <article class="card">
     <h2>Title</h2>
-    <blockquote>
-      <p>content</p>
-    </blockquote>
+    <blockquote>content</blockquote>
+      <p>username</p>
   </article>
   
   <article class="card">
     <h2>Title</h2>
-    <blockquote>
-      <p>content</p>
-    </blockquote>
+    <blockquote>content</blockquote>
+      <p>username</p>
   </article>
 
   <article class="card">
     <h2>Title</h2>
-    <blockquote>
-      <p>content</p>
-    </blockquote>
+    <blockquote>content</blockquote>
+      <p>username</p>
   </article>
 
   <article class="card">
     <h2>Title</h2>
-    <blockquote>
-      <p>content</p>
-    </blockquote>
+    <blockquote>content</blockquote>
+      <p>username</p>
   </article>
 </main>
-<footer id="love">
-  <h3>Made with 💋 by Roni</h3>
-      <ul>
-        <li>Portfolio</li>
-        <li>Blog</li>
-        <li>Email: rutanroni@gmail.com</li>
-      </ul>
+
+<footer>
+  <ul>
+  <li id="love">Made with 💋 by Roni</li>
+    <li><strong>Portfolio:</strong> Roni</li>
+    <li><strong>Blog:</strong> Full-Stack Blog</li>
+    <li><strong>Email:</strong>rutanroni@gmail.com</li>
+  </ul>
 </footer>
 </body>
 </html>
