blog.js adjusted

--- a/Develop/blog.html
+++ b/Develop/blog.html
@@ -23,32 +23,8 @@
 <button id="back">⇦ back</button>
 <button class="dark" id="toggle">☽</button>
 </header>
-<main>
-  <article class="card">
-    <h2>Title</h2>
-    <blockquote>content</blockquote>
-      <p>username</p>
-  </article>
-  
-  <article class="card">
-    <h2>Title</h2>
-    <blockquote>content</blockquote>
-      <p>username</p>
-  </article>
-
-  <article class="card">
-    <h2>Title</h2>
-    <blockquote>content</blockquote>
-      <p>username</p>
-  </article>
-
-  <article class="card">
-    <h2>Title</h2>
-    <blockquote>content</blockquote>
-      <p>username</p>
-  </article>
+<main id="mycards">
 </main>
-
 <footer>
   <ul>
   <li id="love">Made with 💋 by Roni</li>
