--- a/Develop/blog.html
+++ b/Develop/blog.html
@@ -1,37 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>My First Blog</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>My First Blog</title>
+    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link rel="stylesheet" href="./assets/css/blog.css" />
 
-  <link rel="stylesheet" href="./assets/css/styles.css" />
-  <link rel="stylesheet" href="./assets/css/blog.css" />
+    <script defer src="./assets/js/logic.js" type="text/javascript"></script>
+    <script defer src="./assets/js/blog.js" type="text/javascript"></script>
+  </head>
 
-  <script defer src="./assets/js/logic.js" type="text/javascript"></script>
-  <script defer src="./assets/js/blog.js" type="text/javascript"></script>
-</head>
+  <body>
+    <!-- TODO: Create header, main, and footer elements -->
 
-<body>
-
-  <!-- TODO: Create header, main, and footer elements -->
-
-<header>
-<h2>Roni's Blog</h2>
-<button id="back">⇦ back</button>
-<button class="dark" id="toggle">☽</button>
-</header>
-<main id="mycards">
-</main>
-<footer>
-  <ul>
-  <li id="love">Made with 💋 by Roni</li>
-    <li><strong>Portfolio:</strong> Roni</li>
-    <li><strong>Blog:</strong> Full-Stack Blog</li>
-    <li><strong>Email:</strong>rutanroni@gmail.com</li>
-  </ul>
-</footer>
-</body>
+    <header>
+      <h2>Roni's Blog</h2>
+      <button id="back">⇦ back</button>
+      <button class="dark" id="toggle">☽</button>
+    </header>
+    <main id="mycards"></main>
+    <footer>
+      <ul>
+        <li id="love">Made with 💋 by Roni</li>
+        <li><strong>Portfolio:</strong> Roni</li>
+        <li><strong>Blog:</strong> Full-Stack Blog</li>
+        <li><strong>Email:</strong>rutanroni@gmail.com</li>
+      </ul>
+    </footer>
+  </body>
 </html>
